Claude/fix plugin bugs api 1e oko (#30)
* Redesign GUI layout and add QoL improvements

Layout changes:
- Lock/Unlock buttons now both use FILLED_MAP icon; dispatcher upgraded
  from material-based to slot-based routing to handle the shared material
- Item Frame Lock toggle split into: ITEM_FRAME icon (slot 30) + LIME/RED
  indicator pane directly below it (slot 39); both slots are clickable
- Creator Hologram toggle similarly: ENDER_EYE icon (slot 32) + pane (slot 41)
- Map Name toggle: NAME_TAG at slot 2 (top row, near name display) and slot 33
  (toggle section); indicator pane at slot 42. All three slots are clickable
- Toggle Map Name and Toggle Creator Hologram are now adjacent (slots 32-33)
- Close button moved from slot 40 to slot 44 (bottom-right corner)

QoL improvements:
- Row 1 (slots 9-17) is now a full-width lock status bar (green=unlocked,
  red=locked) providing instant visual feedback when the GUI opens
- Map UUID shown in lore of the PAPER display item (slot 1); no longer need
  /mapart info just to look up the UUID
- Section labels added: "Display" (slots 4-5), "Lock" (slot 21),
  "Toggles" (slots 27-28) to visually group related controls
- All interactive items show "(No Permission)" in lore when the player lacks
  the required permission, instead of only erroring on click
- createItem() fully migrated to Adventure API (Component/lore(List<Component>))
  eliminating all remaining deprecated setDisplayName/setLore calls in the GUI

Also fixes mapart.admin → mapart.bypass in CreditUtil.setCredit() (missed in
previous pass)

https://claude.ai/code/session_01PNjoGVnQJsHEtb2gCNCRdY

* Bump version to 1.1.1

https://claude.ai/code/session_01PNjoGVnQJsHEtb2gCNCRdY

---------

Co-authored-by: Claude <noreply@anthropic.com>